<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/courtColor"
    tools:context=".DateTimePicker">

    <TextView
        android:id="@+id/timeText"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:width="300dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/set_time"
        android:textColor="@color/white"
        android:textColorHint="@color/hintWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateText"
        android:freezesText="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="300dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/set_date"
        android:textColor="@color/white"
        android:textColorHint="@color/hintWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeText" />

    <ImageButton
        android:id="@+id/timeBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/pic_clock"
        app:layout_constraintBottom_toTopOf="@+id/setBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/dateBtn"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="140dp"
        android:background="@drawable/pic_calendar"
        app:layout_constraintBottom_toTopOf="@+id/setBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/setBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimary"
        android:onClick="handleSetBtn"
        android:text="@string/set_notification"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/colorPrimary"
        android:onClick="handleCancelBtn"
        android:text="@string/cancel_notification"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="40dp" />


</androidx.constraintlayout.widget.ConstraintLayout>